first corrections and updates

--- a/Lebenslauf.tex
+++ b/Lebenslauf.tex
@@ -43,13 +43,15 @@
     E"~Mail:~micheleviti78@hotmail.com
   \item Geburtsdatum: 17.\,April\,1978\\
     Geburtsort: Arezzo, Italien\\
-    Staatsangeh\"origkeit: italienisch
+    Staatsangeh\"origkeit: italienisch,deutsch 
   \end{cvlist}
   
   \begin{cvlist}{Berufserfahrung}
+  
+  \item
 
-  \item[06.2012-heute] Deutsches Elektronen-Synchrotron DESY Hamburg,
-    R{\"o}ntgenstrahl-Detektoren Gruppe, Post-Doktorand\\
+  \item[06.2012-03.2015] Deutsches Elektronen-Synchrotron DESY Hamburg,
+    R{\"o}ntgenstrahl-Detektoren Gruppe, Wissenschaftlicher Mitarbeiter\\
 
     Aufgaben:\\
     
@@ -81,7 +83,7 @@
     
   \item[01.2010-05.2012] Deutsches Elektronen-Synchrotron DESY
     Hamburg, ALFA Projekt des ATLAS Esperiments am CERN (Genf,
-    Schweiz), Post-Doktorand \\
+    Schweiz), Wissenschaftlicher Mitarbeiter \\
     
     Aufgaben:\\
     
@@ -239,7 +241,7 @@
   \item [02.2006-heute] Leben und arbeiten in Deutschland
   \item [2006-2007] 5 Aufenthaltsperioden in Stanford Universit\"at, USA.
   \item [02.2008] Nowosibirsk, Russische F\"oderation
-  \item [01.2010-heute] Regelm\"a{\ss}ige Aufenthalte in Genf, Schweiz
+  \item [01.2010-06.2012] Regelm\"a{\ss}ige Aufenthalte in Genf, Schweiz
   \end{cvlist}
 
   \begin{cvlist}{Sprachkenntnisse}
