* CV updated * retireved latest version of Anschreiben.tex

--- a/Anschreiben.tex
+++ b/Anschreiben.tex
@@ -15,25 +15,32 @@
 \begin{document}
 \pagestyle{empty}
 
-\begin{letter}{Ecker + Ecker GmbH\\
-Frau Dr. P\"utz\\
-Mittelweg 144\\
-20148 Hamburg }
+\begin{letter}{Kurschat GmbH Messtechnik \& Automation\\
+Frau Witt\\
+B{\"a}ckerstr. 28\\
+21244 Buchholz in der Nordheide\\
+Steinbeck}
 
 \setkomavar{date}{\today}
-\setkomavar{subject}{Bewerbung als Physiker} 
+\setkomavar{subject}{Bewerbung als Programmierer} 
 
-\opening{Sehr geehrte Frau Dr. P\"utz,} 
+\opening{Sehr geehrte Frau Witt,} 
+%\opening{Sehr geehrter Herr Pommer,} 
+%\opening{Sehr geehrte Damen und Herren,}
 
-mein Name ist Michele Viti. \"Uber die Webseite der Joebb\"orse habe
-ich das Stellengebot der Firma Ecker+Ecker mit gro{\ss}em Interesse
-gelesen und möchte mich darauf bewerben.  W\"ahrend meiner
+mein Name ist Michele Viti. 
+\"Uber %Frau Eleonora Gianfermi
+%die StepStone Webseite 
+die Webseite der Jobb{\"o}rse
+habe ich das Stellenangebot der Firma Kurschat mit gro{\ss}em Interesse
+gelesen und m{\"o}chte mich darauf bewerben.  W\"ahrend meiner
 Berufserfahrung habe ich mich mit Datenprozessierung, Datenauswertung
-und der entsprechenden Softwareentwicklung beschäftigt.  Au{\ss}erdem
-habe ich an zahlreichen Meetings, Workshops und internationalen
-Konferenzen teilgenommen bei denen ich Daten und Resultate
-pr\"asentiert habe. In diesem Anschreiben werde ich kurz die wichtigen
-Punkte meines Studiums und meiner Berufserfahrung zusammenfassen.
+und der entsprechenden Softwareentwicklung besch{\"a}ftigt.
+Au{\ss}erdem habe ich an zahlreichen Meetings, Workshops und
+internationalen Konferenzen teilgenommen bei denen ich Daten und
+Resultate pr\"asentiert habe. In diesem Anschreiben werde ich kurz die
+wichtigen Punkte meines Studiums und meiner Berufserfahrung
+zusammenfassen.
 
 %Software entwicklung real time system expertiment
 
@@ -43,25 +50,33 @@ Punkte meines Studiums und meiner Berufserfahrung zusammenfassen.
 An der Perugia Universit\"at in Italien habe ich Physik studiert. Im
 Anschluss daran habe ich in Deutschland an der Humboldt Universit\"at
 zu Berlin im Fachbereich Teilchen-/Beschleunigerphysik promoviert. In
-meinen Studien handelte es sich um Simulation, Test wichtiger
+meinen Studien handelte es sich um Simulation und Test wichtiger
 Komponenten von Teilchenbeschleunigern und Detektoren.
 
 Nach dem erfolgreichen Abschluss meiner Promotion habe ich eine Stelle
 als Post-Doktorand am Forschungsinstitut DESY in Hamburg
-angenommen. Hier arbeite ich f\"ur das ALFA-Projekt des ATLAS
-Experiments am CERN in Genf. Innerhalb dieses Projekts habe ich mich
-mit Detektorstrahltestmessung besch\"aftigt. Zurzeit bin ich der
-Koordinator der "`Data Preparation"' Gruppe, die f\"ur die Auswertung
-der Daten zust\"andig und an der physikalischen Datenanalyse beteiligt
-ist. Au{\ss}erdem gehöre ich zu dem Softwareentwicklungsteam des ATLAS
-Experiments.
+angenommen. Hier arbeitete ich f\"ur das ALFA-Projekt des ATLAS
+Experiments am CERN in Genf. Innerhalb des Projekts habe ich mich mit
+Detektorstrahltestmessung besch\"aftigt. In dem Projekt war ich der
+Koordinator der "`Data Preparation"' Gruppe, die f\"ur die Aufbereitung
+von gro{\ss}en Mengen von Daten zust\"andig und an der physikalischen
+Datenanalyse beteiligt war. Au{\ss}erdem geh{\"o}rte ich zu dem
+Softwareentwicklungsteam des ATLAS Experiments.
+
+Im Juni 2012 wechselte ich zu der Strahlendetektor-Gruppe in DESY. In
+der Gruppe bin ich zust\"andig f\"ur die Entwicklung des
+Softwareframeworks f\"ur Datenaufbereitung, Daten- und
+Bildverarbeitung und der Software f\"ur das Data Acquisition
+System. Au{\ss}erdem beteilige ich mich an der Auswertung der
+Testdaten.
 
 Meine Beitr\"age zu diesen Studien umfassen einen breiten Bereich,
-insbesondere Computersimulation, Datenaufnahme und Datenauswertung. Um
-diese Aufgaben zu erfüllen, habe ich erweiterte statistische
-Analyseverfahren verwendet, fundierte Programmierkenntnisse,
-insbesondere objektorientierte Programmierung, erworben, komplexe
-Software Frameworks benutzt und Algorithmen erzeugt.
+insbesondere Computersimulation, Datenaufnahme, Datenaufbereitung und
+Datenauswertung. Um diese Aufgaben zu erf{\"u}llen, habe ich
+erweiterte statistische Analyseverfahren verwendet, fundierte
+Programmierkenntnisse, insbesondere objektorientierte Programmierung,
+erworben, komplexe Software Frameworks benutzt und Algorithmen
+erzeugt.
 
 %%f\"ur die Entwicklung neuer
 %%Komponenten und Detektoren, Planung und Teilnahme an Tests f\"ur
@@ -70,21 +85,21 @@ Software Frameworks benutzt und Algorithmen erzeugt.
 
 Ich habe eine hohe Flexibilit\"at, Selbstst\"andigkeit und
 Belastbarkeit entwickelt, um mich erfolgreich verschiedenen Themen und
-neuen Herausforderungen zu stellen.Seit mehr als 6 Jahren arbeite ich
+neuen Herausforderungen zu stellen.Seit mehr als 8 Jahren arbeite ich
 innerhalb internationaler Kollaborationen mit verschiedenen
-weltber\"uhmten Instituten und Universitäten, wie z.B. der Stanford
-Universität in der USA, dem Deutsches Elektronen Synchrotron (DESY) in
-Deutschland, dem Forschungszentrum CERN in Genf und dem Budka Institut
-in Novosibirsk, in denen sehr gute Kommunikationsf\"ahigkeiten in
-einer multikulturellen Umgebung und teamorientierte Arbeit erfordert
-sind.
+weltber\"uhmten Instituten und Universit{\"a}ten, wie z.B. der
+Stanford Universit{\"a}t in der USA, dem Deutsches Elektronen
+Synchrotron (DESY) in Deutschland, dem Forschungszentrum CERN in Genf
+und dem Budka Institut in Novosibirsk, in denen sehr gute
+Kommunikationsf\"ahigkeiten in einer multikulturellen Umgebung und
+teamorientierte Arbeit erfordert sind.
 
 %Seit ca. 8 Jahren arbeite ich in
 %gro{\ss}en internationalen Kollaborationen, .
 
 Aufgrund meiner oben genannten T\"atigkeiten entsprechen meine
 Qualit\"aten und Kompetenzen sehr gut den Anforderungen dieser Stelle
-als Physiker. \"Uber eine Einladung zu einem pers\"onlichen
+als Programmierer. \"Uber eine Einladung zu einem pers\"onlichen
 Vorstellungsgespr\"ach w\"urde ich mich sehr freuen.
 
 \closing{Mit freundlichem Gru\ss}
