* deleted pdf output file * some cosmetics and update in cv

--- a/Lebenslauf.tex
+++ b/Lebenslauf.tex
@@ -74,12 +74,13 @@ Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
 \item[Programmiersprachen] : C++11, Python
 \item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT
 \item[Kommunikationsprotokoll] : TCP/IP, UDP
-\item[Bibliotek] : GSL, ZMQ
+\item[Bibliotek] : GSL, ZMQ, boost
 \item[Hardware] : MTCA Standard
 \item[Versionsverwaltungssysteme] : SVN, Git
 \item[Integrierte Entwicklungsumgebung] : Eclipse, Qt Creator
 \end{description}
 
+\vspace{\baselineskip}
 
 \item[06.2012-03.2015] Deutsches Elektronen-Synchrotron DESY Hamburg,
 R{\"o}ntgenstrahl-Detektoren Gruppe, Wissenschaftlicher Mitarbeiter\\
@@ -113,6 +114,8 @@ XP/7
 \item[Bibliotek] : Minuit
 \item[Version control Systems] : SVN
 \end{description}
+
+\vspace{\baselineskip}
 
 \item[01.2010-05.2012] Deutsches Elektronen-Synchrotron DESY
 Hamburg, ALFA Projekt des ATLAS Esperiments am CERN (Genf,
@@ -154,12 +157,16 @@ XP/7
 \item[Bibliotek] : Minuit
 \end{description}
 
+\vspace{\baselineskip}
+
 \item[02.2006-12.2009] Deutsches Elektronen-Synchrotron DESY Zeuthen,
 International Linear Collider Projekt, Wissenschaftlicher Mitarbeiter \\
 
 Aufgaben:\\
 
 Siehe Doktorarbeit.
+
+\vspace{\baselineskip}
 
 \item[02.2005-01.2006] Perugia
 Universit\"at, Italien, wissenschaftlicher Mitarbeiter \\
@@ -269,7 +276,7 @@ f\"ur das ALFA Projekt
 \end{cvlist}
 
 \begin{cvlist}{Berufliche Auslandsaufenthalte}
-\item [02.2006-heute] Leben und arbeiten in Deutschland
+\item [02.2006-12.2014] Leben und arbeiten in Deutschland
 \item [2006-2007] 5 Aufenthaltsperioden in Stanford Universit\"at, USA.
 \item [02.2008] Nowosibirsk, Russische F\"oderation
 \item [01.2010-06.2012] Regelm\"a{\ss}ige Aufenthalte in Genf, Schweiz
@@ -293,10 +300,11 @@ f\"ur das ALFA Projekt
 
 \begin{cvlist}{Freizeit}
 \item Segeln (SBF Binnen, SBF See, SKS)
-\item Vereinsmitglied "`Verein Jugendsegeln e.V."', Kiel
-\item Besatzungsmitglied des Traditionsseglers "`Pr\"asident Freiherr
-von Maltzahn"', Museumshafen \"Ovelg\"onne e.V., Hamburg
+\item Besatzungsmitglied des Traditionsseglers "`Zuversicht"', "`Verein
+Jugendsegeln e.V."', Kiel
+\item Vereinsmitglied Museumshafen \"Ovelg\"onne e.V., Hamburg
 \item Wandern
+\item Motorradfahren
 \item Plattdeutsch
 \end{cvlist}
 
