3 versions of the cv

--- a/LebenslaufExtraKurz/Lebenslauf.tex
+++ b/LebenslaufExtraKurz/Lebenslauf.tex
@@ -32,7 +32,7 @@
 \renewcommand{\labelitemii}{$\bullet$}
 
 \begin{document}
-\parpic[rs][]{\includegraphics[width=3cm]{Profilfoto.jpg}}
+\parpic[rs][]{\includegraphics[width=3cm]{../Profilfoto.jpg}}
 \begin{cv}{Lebenslauf}
 \begin{cvlist}{Pers"onliche Daten}
 \item Dr. Michele Viti\\
