--- a/LebenslaufKurz/Lebenslauf.tex
+++ b/LebenslaufKurz/Lebenslauf.tex
@@ -18,7 +18,7 @@
 
 
 \usepackage[final]{graphicx}  % um Graphiken einzubinden
-\usepackage{picins} %fuer bild einfuegen
+\usepackage{../picins} %fuer bild einfuegen
 
 
 \newcommand{\ccplusplus}{{\sffamily\smaller C/{C}\hbox{\kern.05em\raise.25ex%
