long (basis) versions cleaned up

--- a/LebenslaufExtraKurz/Lebenslauf.tex
+++ b/LebenslaufExtraKurz/Lebenslauf.tex
@@ -54,16 +54,14 @@ Maschine Strahl Kontrolle (MSK) Gruppe, Wissenschaftlicher Mitarbeiter\\
 Aufgaben:\\
 
 Die MSK Gruppe ist zust{\"a}ndig f{\"u}r die Entwiklung von Messger{\"a}ten und
-deren Komponenten f{\"u}r die Messung der Eigenschaften der Elektronenstrahl der
-Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
+deren Komponenten f{\"u}r die Messung der Eigenschaften des Elektronenstrahls
+der Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
 \begin{itemize}
   \item Design und Implementation der Software f{\"u}r die Datenerfassung und
   Steurung der Messger{\"a}te
-  \item Design und Implementation der Software f{\"u}r die Steurung von
-  Schrittmotoren
-  \item Design und Implementation von Benutzerschnittstellen
+  \item Design und Implementation von Benutzerschnittstellen und DOOCS servers
   \item Entwicklung von Algorithmen f{\"u}r die Kalibration und
-  Einstellung der Messger{\"a}te und Schrittmotoren
+  Einstellung der Messger{\"a}te
   \item Entwiklung von Unit- und Integrationstests
   \item Wartung und Pflege der Software
   \item Teilname an Testmessungen f{\"u}r die Inbetriebnahme der Messger{\"a}te
@@ -118,7 +116,7 @@ XP/7
 \vspace{\baselineskip}
 
 \item[01.2010-05.2012] Deutsches Elektronen-Synchrotron DESY
-Hamburg, ALFA Projekt des ATLAS Esperiments am CERN (Genf,
+Hamburg, ALFA Projekt des ATLAS Esperiments an CERN (Genf,
 Schweiz), Wissenschaftlicher Mitarbeiter \\
 
 Aufgaben:\\
@@ -140,7 +138,7 @@ Beschleunigers installiert
   \end{itemize}
   \item Anfang 2011 Installation der Detektoren abgeschlossen
   \begin{itemize}
-    \item Zur Zeit Koordinator der "`Data Preparation"'-Gruppe, die
+    \item Koordinator der "`Data Preparation"'-Gruppe, die
     f{\"u}r die Aufbereitung und Prozessierung der Daten f{\"u}r
     die Physikanalyse verantwortlich ist
     \item Beteiligung an der physikalischen Datenanalyse
@@ -249,9 +247,8 @@ Aufgaben:\\
 \begin{description}
 \item[Betriebssysteme] : Windows XP, Red Hat Linux
 \item[Programmiersprachen] : Fortran, C
-\item[Software framework] : GEANT 3
+\item[Software framework] : GEANT 3, PAW
 \item[Bibliotek] : OpenGL
-\item[Datenanalyse] : PAW
 \end{description}
 \end{cvlist}
 
@@ -261,7 +258,7 @@ Castiglione"', Castiglion Fiorentino, Italien
 \end{cvlist}
 
 \begin{cvlist}{F\"uhrungspositionen}
-\item [07.2011-heute] Koordinator der "`Data Preparation"'-Gruppe
+\item [07.2011-05.2012] Koordinator der "`Data Preparation"'-Gruppe
 f\"ur das ALFA Projekt
 %\begin{cvlist}{Weitere Qualifikationen}
 %\item[06.2008] Specialized CERN Accelerator School "Beam Diagnostics", Dourdan, Frankreich
@@ -269,28 +266,27 @@ f\"ur das ALFA Projekt
 \end{cvlist}
 
 \begin{cvlist}{Lehre}
-\item [07.2006-09.2006] Betreuung von DESY-Sommerstudent
-\item [07.2007-09.2007] Betreuung von DESY-Sommerstudent
-\item [07.2010-09.2010] Betreuung von DESY-Sommerstudent
-\item [04.2011-02.2012] Betreuung von Masterstudent
+\item [07.2006-02.2012] Betreuung von DESY-Sommerstudenten und
+Masterstudenten
 \end{cvlist}
 
 \begin{cvlist}{Berufliche Auslandsaufenthalte}
-\item [02.2006-12.2014] Leben und arbeiten in Deutschland
+\item [02.2006-12.2014] Leben und arbeiten in Deutschland (seit 12.2014
+deutscher B{\"u}rger)
 \item [2006-2007] 5 Aufenthaltsperioden in Stanford Universit\"at, USA.
 \item [02.2008] Nowosibirsk, Russische F\"oderation
 \item [01.2010-06.2012] Regelm\"a{\ss}ige Aufenthalte in Genf, Schweiz
 \end{cvlist}
 
 \begin{cvlist}{Sprachkenntnisse}
-\item Italienisch: Muttersprache
-\item Deutsch: verhandlungssicher
-\item Englisch: verhandlungssicher
+\item [Italienisch] Muttersprache
+\item [Deutsch] verhandlungssicher
+\item [Englisch] verhandlungssicher
 \end{cvlist}
 
 \begin{cvlist}{Weitere \ac{EDV} Kenntnisse}
-\item[Programmiersprachen] Pascal, \ac{BASIC}
-\item[Sonstiges] \ac{MS OFFICE}, \ac{\LaTeX}, UML(Grundkenntnisse)
+%\item[Programmiersprachen] Pascal, \ac{BASIC}
+\item[Sonstiges] \ac{MS OFFICE}, \ac{\LaTeX}, UML
 \end{cvlist}
 
 %\begin{cvlist}{Internal Notes}
@@ -299,7 +295,7 @@ f\"ur das ALFA Projekt
 %\end{cvlist}
 
 \begin{cvlist}{Freizeit}
-\item Segeln (SBF Binnen, SBF See, SKS)
+\item Segeln (SBF Binnen, SBF See, SKS, SRC, UBI, FKN)
 \item Besatzungsmitglied des Traditionsseglers "`Zuversicht"', "`Verein
 Jugendsegeln e.V."', Kiel
 \item Vereinsmitglied Museumshafen \"Ovelg\"onne e.V., Hamburg
