--- a/LebenslaufExtraKurz/Lebenslauf.tex
+++ b/LebenslaufExtraKurz/Lebenslauf.tex
@@ -48,181 +48,224 @@ Staatsangeh\"origkeit: italienisch,deutsch
 
 \begin{cvlist}{Berufserfahrung}
 
-\item[04.2012-heute] Deutsches Elektronen-Synchrotron DESY Hamburg,
-Maschine Strahl Kontrolle (MSK) Gruppe, Wissenschaftlicher Mitarbeiter\\
+\item[01.2010-heute] Deutsches Elektronen-Synchrotron DESY Hamburg,
+Wissenschaftlicher Mitarbeiter
 
-Aufgaben:\\
-
-Die MSK Gruppe ist zust{\"a}ndig f{\"u}r die Entwiklung von Messger{\"a}ten und
+{\scshape {\bfseries Projekte:}}
+\begin{description}
+\item[04.2012-heute]  Entwiklung von Messger{\"a}ten und
 deren Komponenten f{\"u}r die Messung der Eigenschaften des Elektronenstrahls
 der Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
-\begin{itemize}
-  \item Design und Implementation der Software f{\"u}r die Datenerfassung und
-  Steurung der Messger{\"a}te
-  \item Design und Implementation von Benutzerschnittstellen und DOOCS servers
-  \item Entwicklung von Algorithmen f{\"u}r die Kalibration und
-  Einstellung der Messger{\"a}te
-  \item Entwiklung von Unit- und Integrationstests
-  \item Wartung und Pflege der Software
-  \item Teilname an Testmessungen f{\"u}r die Inbetriebnahme der Messger{\"a}te
-\end{itemize}
-{\scshape {\bfseries Software:}}
-\begin{description}
-\item[Betriebssysteme] : Ubuntu Linux (12.04 und 16.04)
-\item[Programmiersprachen] : C++11, Python
-\item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT
-\item[Kommunikationsprotokoll] : TCP/IP, UDP
-\item[Bibliotek] : GSL, ZMQ, boost
-\item[Hardware] : MTCA Standard
-\item[Versionsverwaltungssysteme] : SVN, Git
-\item[Integrierte Entwicklungsumgebung] : Eclipse, Qt Creator
-\end{description}
-
-\vspace{\baselineskip}
-
-\item[06.2012-03.2015] Deutsches Elektronen-Synchrotron DESY Hamburg,
-R{\"o}ntgenstrahl-Detektoren Gruppe, Wissenschaftlicher Mitarbeiter\\
-
-Aufgaben:\\
-
-Teilnahme am Projekt PERCIVAL. Entwicklung eines neuen
+\item[06.2012-03.2015]Projekt PERCIVAL, Entwicklung eines neuen
 bildgebenden CMOS-Detektors
-\begin{itemize}
-  \item Teilnahme an Testmessungen
-  \item Entwicklung des Softwareframeworks f{\"u}r Daten- und
-  Bilderverarbeitung
-  \item Entwicklung einer graphischen Benutzerschnittstelle f{\"u}r  das Softwareframework
-  \item Entwicklung der Software f{\"u}r das Data Acquisition
-  System
-  \item Entwicklung einer graphischen Benutzerschnittstelle mit Online
-  Monitor f{\"u}r das Data Acquisition System
-  \item Entwicklung der Software f{\"u}r die Auswertung der Testdaten
-  \item ADC Charakterisierung und Kalibration
-  \item Bestimmung der Detektoraufl{\"o}sung
-\end{itemize}
-
-{\scshape {\bfseries Software:}}
-\begin{description}
-\item[Betriebssysteme] : Ubuntu Linux, Scientific Linux, Windows
-XP/7
-\item[Programmiersprachen] : C++
-\item[Software framework] : Qt (Version 4.6.2 und 4.8.6), ROOT
- \item[Kommunikationsprotokoll] : TCP/IP, UDP
-\item[Integrierte Entwicklungsumgebung] : Qt Creator
-\item[Bibliotek] : Minuit
-\item[Version control Systems] : SVN
+\item[01.2010-05.2012]ALFA Projekt des ATLAS Esperiments an CERN (Genf,
+Schweiz) Entwicklung und installation von Spurdetektoren aus szintillierenden
+Fasern in beweglichen Vakuumtanks entlang der Strahlr{\"o}hre des LHC
+Beschleunigers.
 \end{description}
 
-\vspace{\baselineskip}
+% {\scshape {\bfseries Aufgaben:}}
+% \begin{itemize}
+%   \item Design und Implementation der Software f{\"u}r die Datenerfassung und
+%   Steurung der Messger{\"a}te und Detekoren
+%   \item Entwicklung des Softwareframeworks f{\"u}r Daten- und
+%   Bilderverarbeitung
+%   \item Design und Implementation von graphischen Benutzerschnittstellen
+%   \item Entwicklung von Algorithmen f{\"u}r die Kalibration, 
+%   Einstellung der Messger{\"a}te und Bestimmung der Detektoraufl{\"o}sung
+%   \item Entwiklung von Unit- und Integrationstests
+%   \item Wartung und Pflege der Software
+%   \item Teilname an Testmessungen f{\"u}r die Inbetriebnahme der Messger{\"a}te
+%   \item Auswertung der Testdaten
+% \end{itemize}
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Ubuntu Linux (12.04 und 16.04), Scientific Linux,
+% Windows XP/7
+% \item[Programmiersprachen] : C++11, Python
+% \item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT, Marlin
+% \item[Kommunikationsprotokoll] : TCP/IP, UDP
+% \item[Bibliotek] : GSL, ZMQ, boost, Minuit
+% \item[Hardware] : MTCA Standard
+% \item[Versionsverwaltungssysteme] : SVN, Git
+% \item[Integrierte Entwicklungsumgebung] : Eclipse, Qt Creator
+% \end{description}
 
-\item[01.2010-05.2012] Deutsches Elektronen-Synchrotron DESY
-Hamburg, ALFA Projekt des ATLAS Esperiments an CERN (Genf,
-Schweiz), Wissenschaftlicher Mitarbeiter \\
+% \item[04.2012-heute] Deutsches Elektronen-Synchrotron DESY Hamburg,
+% Maschine Strahl Kontrolle (MSK) Gruppe, Wissenschaftlicher Mitarbeiter\\
+% 
+% Aufgaben:\\
+% 
+% Die MSK Gruppe ist zust{\"a}ndig f{\"u}r die Entwiklung von Messger{\"a}ten und
+% deren Komponenten f{\"u}r die Messung der Eigenschaften des Elektronenstrahls
+% der Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
+% \begin{itemize}
+%   \item Design und Implementation der Software f{\"u}r die Datenerfassung und
+%   Steurung der Messger{\"a}te
+%   \item Design und Implementation von Benutzerschnittstellen und DOOCS servers
+%   \item Entwicklung von Algorithmen f{\"u}r die Kalibration und
+%   Einstellung der Messger{\"a}te
+%   \item Entwiklung von Unit- und Integrationstests
+%   \item Wartung und Pflege der Software
+%   \item Teilname an Testmessungen f{\"u}r die Inbetriebnahme der Messger{\"a}te
+% \end{itemize}
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Ubuntu Linux (12.04 und 16.04)
+% \item[Programmiersprachen] : C++11, Python
+% \item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT
+% \item[Kommunikationsprotokoll] : TCP/IP, UDP
+% \item[Bibliotek] : GSL, ZMQ, boost
+% \item[Hardware] : MTCA Standard
+% \item[Versionsverwaltungssysteme] : SVN, Git
+% \item[Integrierte Entwicklungsumgebung] : Eclipse, Qt Creator
+% \end{description}
+% 
+% \vspace{\baselineskip}
+% 
+% \item[06.2012-03.2015] Deutsches Elektronen-Synchrotron DESY Hamburg,
+% R{\"o}ntgenstrahl-Detektoren Gruppe, Wissenschaftlicher Mitarbeiter\\
+% 
+% Aufgaben:\\
 
-Aufgaben:\\
+% Teilnahme am Projekt PERCIVAL. Entwicklung eines neuen
+% bildgebenden CMOS-Detektors
+% \begin{itemize}
+%   \item Teilnahme an Testmessungen
+%   \item Entwicklung des Softwareframeworks f{\"u}r Daten- und
+%   Bilderverarbeitung
+%   \item Entwicklung einer graphischen Benutzerschnittstelle f{\"u}r  das Softwareframework
+%   \item Entwicklung der Software f{\"u}r das Data Acquisition
+%   System
+%   \item Entwicklung einer graphischen Benutzerschnittstelle mit Online
+%   Monitor f{\"u}r das Data Acquisition System
+%   \item Entwicklung der Software f{\"u}r die Auswertung der Testdaten
+%   \item ADC Charakterisierung und Kalibration
+%   \item Bestimmung der Detektoraufl{\"o}sung
+% \end{itemize}
+% 
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Ubuntu Linux, Scientific Linux, Windows
+% XP/7
+% \item[Programmiersprachen] : C++
+% \item[Software framework] : Qt (Version 4.6.2 und 4.8.6), ROOT
+% \item[Kommunikationsprotokoll] : TCP/IP, UDP
+% \item[Integrierte Entwicklungsumgebung] : Qt Creator
+% \item[Bibliotek] : Minuit
+% \item[Version control Systems] : SVN
+% \end{description}
+% 
+% \vspace{\baselineskip}
 
-Im ALFA Projekt werden Spurdetektoren aus szintillierenden Fasern
-in beweglichen Vakuumtanks entlang der Strahlr{\"o}hre des LHC
-Beschleunigers installiert
-\begin{itemize}
-  \item Vor der Installation der Detektoren im LHC Tunnel, Teilnahme
-  an der Planung und der Durchf{\"u}hrung von Testmessung am CERN
-  \begin{itemize}
-    \item Rekonstruktion der Referenzspuren mit EUDET Silikon-Pixel
-    Detektor und Durchf{\"u}hrung der Ausrichtung zwischen EUDET
-    und ALFA Detektoren
-    \item Prozessierung der gesamten Daten der Testmessung mit den
-    selbstentwickelten Programmen und Vorbereitung f{\"u}r die
-    Auswertung innerhalb der ALFA Gruppe
-    \item Beteligung an der Testdatenanalyse
-  \end{itemize}
-  \item Anfang 2011 Installation der Detektoren abgeschlossen
-  \begin{itemize}
-    \item Koordinator der "`Data Preparation"'-Gruppe, die
-    f{\"u}r die Aufbereitung und Prozessierung der Daten f{\"u}r
-    die Physikanalyse verantwortlich ist
-    \item Beteiligung an der physikalischen Datenanalyse
-    \item Pflege und weitere Entwicklung von Softwareschnittstellen
-  \end{itemize}
-\end{itemize}
+% \item[01.2010-05.2012] Deutsches Elektronen-Synchrotron DESY
+% Hamburg, ALFA Projekt des ATLAS Esperiments an CERN (Genf,
+% Schweiz), Wissenschaftlicher Mitarbeiter \\
+% 
+% Aufgaben:\\
+% 
+% Im ALFA Projekt werden Spurdetektoren aus szintillierenden Fasern
+% in beweglichen Vakuumtanks entlang der Strahlr{\"o}hre des LHC
+% Beschleunigers installiert
+% \begin{itemize}
+%   \item Vor der Installation der Detektoren im LHC Tunnel, Teilnahme
+%   an der Planung und der Durchf{\"u}hrung von Testmessung am CERN
+%   \begin{itemize}
+%     \item Rekonstruktion der Referenzspuren mit EUDET Silikon-Pixel
+%     Detektor und Durchf{\"u}hrung der Ausrichtung zwischen EUDET
+%     und ALFA Detektoren
+%     \item Prozessierung der gesamten Daten der Testmessung mit den
+%     selbstentwickelten Programmen und Vorbereitung f{\"u}r die
+%     Auswertung innerhalb der ALFA Gruppe
+%     \item Beteligung an der Testdatenanalyse
+%   \end{itemize}
+%   \item Anfang 2011 Installation der Detektoren abgeschlossen
+%   \begin{itemize}
+%     \item Koordinator der "`Data Preparation"'-Gruppe, die
+%     f{\"u}r die Aufbereitung und Prozessierung der Daten f{\"u}r
+%     die Physikanalyse verantwortlich ist
+%     \item Beteiligung an der physikalischen Datenanalyse
+%     \item Pflege und weitere Entwicklung von Softwareschnittstellen
+%   \end{itemize}
+% \end{itemize}
+% 
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Ubuntu Linux, Scientific Linux, Windows
+% XP/7
+% \item[Programmiersprachen] : C++, Python
+% \item[Software framework] : Marlin, ROOT
+% \item[Bibliotek] : Minuit
+% \end{description}
 
-{\scshape {\bfseries Software:}}
-\begin{description}
-\item[Betriebssysteme] : Ubuntu Linux, Scientific Linux, Windows
-XP/7
-\item[Programmiersprachen] : C++, Python
-\item[Software framework] : Marlin, ROOT
-\item[Bibliotek] : Minuit
-\end{description}
-
-\vspace{\baselineskip}
-
-\item[02.2006-12.2009] Deutsches Elektronen-Synchrotron DESY Zeuthen,
-International Linear Collider Projekt, Wissenschaftlicher Mitarbeiter \\
-
-Aufgaben:\\
-
-Siehe Doktorarbeit.
+% \vspace{\baselineskip}
+%
+% \item[02.2006-12.2009] Deutsches Elektronen-Synchrotron DESY Zeuthen,
+% International Linear Collider Projekt, Wissenschaftlicher Mitarbeiter \\
+%
+% Aufgaben:\\
+%
+% Siehe Doktorarbeit.
 
 \vspace{\baselineskip}
 
 \item[02.2005-01.2006] Perugia
 Universit\"at, Italien, wissenschaftlicher Mitarbeiter \\
 
-Aufgaben:\\
-
-Fortsetzung der Diplomarbeit.
+% Aufgaben:\\
+% 
+% Fortsetzung der Diplomarbeit.
 
 \end{cvlist}
 
 \begin{cvlist}{Promotion}
-\item[02.2006-08.2009]
+\item[02.2006-12.2009]
 
 Deutsches Elektronen-Synchrotron DESY, Zeuthen, Linear Collider
 Gruppe, Doktorand / wissenschaftlicher Mitarbeiter\\ Thema:
 "`Precise and Fast Beam Energy Measurements at the International
 Linear Collider"'
 
-Aufgaben:\\
+% Aufgaben:\\
+% 
+% \begin{itemize}
+%   
+%   \item Test und Bau eines Prototyps f{\"u}r die
+%   Strahlenergiemessung einer zuk{\"u}nftigen
+%   Teilchenbeschleunigermaschine am Stanford Accelerator Center in
+%   der USA
+%   \begin{itemize}
+%     \item Teilnahme an der Planung, Durchf{\"u}hrung und der
+%     Datenaufnahme des Tests
+%     \item Test der Dipolmagnete des Apparates.
+%     \item Messdatenauswertung und Bestimmung der Aufl{\"o}sung der
+%     Strahlenergiemessung
+%   \end{itemize}
+%   
+%   \item Machbarkeitsstudie einer neuen Methode f{\"u}r die
+%   Strahlenergiemessung, die auf Comptonstreuung von
+%   Strahlteilchen mit Laserphotonen beruht
+%   \begin{itemize}
+%     \item Simulation des Layouts des Prototyps.
+%     \item Untersuchung der Anforderungen f{\"u}r die
+%     Lasereigenschaften
+%     \item Simulation und Untersuchung f{\"u}r verschiedene
+%     Detektoren
+%     \item Berechnung und Sch{\"a}tzung von physikalischen
+%     Hintergrundprozessen und deren Wirkung auf die
+%     Strahlenergiemessung
+%   \end{itemize}
+%   
+% \end{itemize}
 
-\begin{itemize}
-  
-  \item Test und Bau eines Prototyps f{\"u}r die
-  Strahlenergiemessung einer zuk{\"u}nftigen
-  Teilchenbeschleunigermaschine am Stanford Accelerator Center in
-  der USA
-  \begin{itemize}
-    \item Teilnahme an der Planung, Durchf{\"u}hrung und der
-    Datenaufnahme des Tests
-    \item Test der Dipolmagnete des Apparates.
-    \item Messdatenauswertung und Bestimmung der Aufl{\"o}sung der
-    Strahlenergiemessung
-  \end{itemize}
-  
-  \item Machbarkeitsstudie einer neuen Methode f{\"u}r die
-  Strahlenergiemessung, die auf Comptonstreuung von
-  Strahlteilchen mit Laserphotonen beruht
-  \begin{itemize}
-    \item Simulation des Layouts des Prototyps.
-    \item Untersuchung der Anforderungen f{\"u}r die
-    Lasereigenschaften
-    \item Simulation und Untersuchung f{\"u}r verschiedene
-    Detektoren
-    \item Berechnung und Sch{\"a}tzung von physikalischen
-    Hintergrundprozessen und deren Wirkung auf die
-    Strahlenergiemessung
-  \end{itemize}
-  
-\end{itemize}
-
-{\scshape {\bfseries Software:}}
-\begin{description}
-\item[Betriebssysteme] : Ubuntu Linux, Scientific Linux, Windows XP
-\item[Programmiersprachen] : C++, Python, Fotran
-\item[Software framework] : GEANT 4, ROOT
-\item[Bibliotek] : Minuit
-\item[Monte Carlo Generator] : CAIN, COMRAD
-\end{description}
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Ubuntu Linux, Scientific Linux, Windows XP
+% \item[Programmiersprachen] : C++, Python, Fotran
+% \item[Software framework] : GEANT 4, ROOT
+% \item[Bibliotek] : Minuit
+% \item[Monte Carlo Generator] : CAIN, COMRAD
+% \end{description}
 
 \item[11.2009] Verteidigung der Doktorarbeit
 
@@ -235,21 +278,21 @@ Physik, Thema der Diplomarbeit: "`Evaluation of a Tracking
 Algorithm for the Trigger of the KOPIO Experiment on the Decay
 $K_L^0\rightarrow\pi^0\nu\bar{\nu}$"'\\
 
-Aufgaben:\\
+% Aufgaben:\\
+% 
+% \begin{itemize}
+%   \item Simulation eines Mustererkennungsalgorithmus (Pattern
+%   Recognition) f{\"u}r den Trigger des KOPIO Experiments
+%   \item Entwicklung eines Event Display f{\"u}r das Simulationsprogramm
+% \end{itemize}
 
-\begin{itemize}
-  \item Simulation eines Mustererkennungsalgorithmus (Pattern
-  Recognition) f{\"u}r den Trigger des KOPIO Experiments
-  \item Entwicklung eines Event Display f{\"u}r das Simulationsprogramm
-\end{itemize}
-
-{\scshape {\bfseries Software:}}
-\begin{description}
-\item[Betriebssysteme] : Windows XP, Red Hat Linux
-\item[Programmiersprachen] : Fortran, C
-\item[Software framework] : GEANT 3, PAW
-\item[Bibliotek] : OpenGL
-\end{description}
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Windows XP, Red Hat Linux
+% \item[Programmiersprachen] : Fortran, C
+% \item[Software framework] : GEANT 3, PAW
+% \item[Bibliotek] : OpenGL
+% \end{description}
 \end{cvlist}
 
 \begin{cvlist}{Schulabschluss}
