--- a/LebenslaufKurz/Lebenslauf.tex
+++ b/LebenslaufKurz/Lebenslauf.tex
@@ -64,32 +64,32 @@ Fasern in beweglichen Vakuumtanks entlang der Strahlr{\"o}hre des LHC
 Beschleunigers.
 \end{description}
 
-{\scshape {\bfseries Aufgaben:}}
-\begin{itemize}
-  \item Design und Implementation der Software f{\"u}r die Datenerfassung und
-  Steurung der Messger{\"a}te und Detekoren
-  \item Entwicklung des Softwareframeworks f{\"u}r Daten- und
-  Bilderverarbeitung
-  \item Design und Implementation von graphischen Benutzerschnittstellen
-  \item Entwicklung von Algorithmen f{\"u}r die Kalibration, 
-  Einstellung der Messger{\"a}te und Bestimmung der Detektoraufl{\"o}sung
-  \item Entwiklung von Unit- und Integrationstests
-  \item Wartung und Pflege der Software
-  \item Teilname an Testmessungen f{\"u}r die Inbetriebnahme der Messger{\"a}te
-  \item Auswertung der Testdaten
-\end{itemize}
-{\scshape {\bfseries Software:}}
-\begin{description}
-\item[Betriebssysteme] : Ubuntu Linux (12.04 und 16.04), Scientific Linux,
-Windows XP/7
-\item[Programmiersprachen] : C++11, Python
-\item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT, Marlin
-\item[Kommunikationsprotokoll] : TCP/IP, UDP
-\item[Bibliotek] : GSL, ZMQ, boost, Minuit
-\item[Hardware] : MTCA Standard
-\item[Versionsverwaltungssysteme] : SVN, Git
-\item[Integrierte Entwicklungsumgebung] : Eclipse, Qt Creator
-\end{description}
+% {\scshape {\bfseries Aufgaben:}}
+% \begin{itemize}
+%   \item Design und Implementation der Software f{\"u}r die Datenerfassung und
+%   Steurung der Messger{\"a}te und Detekoren
+%   \item Entwicklung des Softwareframeworks f{\"u}r Daten- und
+%   Bilderverarbeitung
+%   \item Design und Implementation von graphischen Benutzerschnittstellen
+%   \item Entwicklung von Algorithmen f{\"u}r die Kalibration, 
+%   Einstellung der Messger{\"a}te und Bestimmung der Detektoraufl{\"o}sung
+%   \item Entwiklung von Unit- und Integrationstests
+%   \item Wartung und Pflege der Software
+%   \item Teilname an Testmessungen f{\"u}r die Inbetriebnahme der Messger{\"a}te
+%   \item Auswertung der Testdaten
+% \end{itemize}
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Ubuntu Linux (12.04 und 16.04), Scientific Linux,
+% Windows XP/7
+% \item[Programmiersprachen] : C++11, Python
+% \item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT, Marlin
+% \item[Kommunikationsprotokoll] : TCP/IP, UDP
+% \item[Bibliotek] : GSL, ZMQ, boost, Minuit
+% \item[Hardware] : MTCA Standard
+% \item[Versionsverwaltungssysteme] : SVN, Git
+% \item[Integrierte Entwicklungsumgebung] : Eclipse, Qt Creator
+% \end{description}
 
 % \item[04.2012-heute] Deutsches Elektronen-Synchrotron DESY Hamburg,
 % Maschine Strahl Kontrolle (MSK) Gruppe, Wissenschaftlicher Mitarbeiter\\
@@ -212,9 +212,9 @@ Windows XP/7
 \item[02.2005-01.2006] Perugia
 Universit\"at, Italien, wissenschaftlicher Mitarbeiter \\
 
-Aufgaben:\\
-
-Fortsetzung der Diplomarbeit.
+% Aufgaben:\\
+% 
+% Fortsetzung der Diplomarbeit.
 
 \end{cvlist}
 
@@ -258,14 +258,14 @@ Linear Collider"'
 %   
 % \end{itemize}
 
-{\scshape {\bfseries Software:}}
-\begin{description}
-\item[Betriebssysteme] : Ubuntu Linux, Scientific Linux, Windows XP
-\item[Programmiersprachen] : C++, Python, Fotran
-\item[Software framework] : GEANT 4, ROOT
-\item[Bibliotek] : Minuit
-\item[Monte Carlo Generator] : CAIN, COMRAD
-\end{description}
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Ubuntu Linux, Scientific Linux, Windows XP
+% \item[Programmiersprachen] : C++, Python, Fotran
+% \item[Software framework] : GEANT 4, ROOT
+% \item[Bibliotek] : Minuit
+% \item[Monte Carlo Generator] : CAIN, COMRAD
+% \end{description}
 
 \item[11.2009] Verteidigung der Doktorarbeit
 
@@ -286,13 +286,13 @@ $K_L^0\rightarrow\pi^0\nu\bar{\nu}$"'\\
 %   \item Entwicklung eines Event Display f{\"u}r das Simulationsprogramm
 % \end{itemize}
 
-{\scshape {\bfseries Software:}}
-\begin{description}
-\item[Betriebssysteme] : Windows XP, Red Hat Linux
-\item[Programmiersprachen] : Fortran, C
-\item[Software framework] : GEANT 3, PAW
-\item[Bibliotek] : OpenGL
-\end{description}
+% {\scshape {\bfseries Software:}}
+% \begin{description}
+% \item[Betriebssysteme] : Windows XP, Red Hat Linux
+% \item[Programmiersprachen] : Fortran, C
+% \item[Software framework] : GEANT 3, PAW
+% \item[Bibliotek] : OpenGL
+% \end{description}
 \end{cvlist}
 
 \begin{cvlist}{Schulabschluss}
