add one more library

--- a/LebenslaufKomplet/Lebenslauf.tex
+++ b/LebenslaufKomplet/Lebenslauf.tex
@@ -72,7 +72,7 @@ der Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
 \item[Programmiersprachen] : C++11, Python
 \item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT
 \item[Kommunikationsprotokoll] : TCP/IP, UDP
-\item[Bibliotek] : GSL, ZMQ, boost
+\item[Bibliotek] : GSL, ZMQ, boost, HDF5
 \item[Hardware] : MTCA Standard
 \item[Versionsverwaltungssysteme] : SVN, Git
 \item[Integrierte Entwicklungsumgebung] : Eclipse, Qt Creator
