--- a/LebenslaufStandard/Lebenslauf.tex
+++ b/LebenslaufStandard/Lebenslauf.tex
@@ -85,7 +85,7 @@ Windows XP/7
 \item[Programmiersprachen] : C++11, Python
 \item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT, Marlin
 \item[Kommunikationsprotokoll] : TCP/IP, UDP
-\item[Bibliotek] : GSL, ZMQ, boost, Minuit
+\item[Bibliotek] : GSL, ZMQ, boost, Minuit, HDF5
 \item[Hardware] : MTCA Standard
 \item[Versionsverwaltungssysteme] : SVN, Git
 \item[Integrierte Entwicklungsumgebung] : Eclipse, Qt Creator
