* new file, update Lebenslauf, started anschreiben

--- a/LebenslaufKomplet/Lebenslauf.tex
+++ b/LebenslaufKomplet/Lebenslauf.tex
@@ -268,6 +268,7 @@ f\"ur das ALFA Projekt
 \begin{cvlist}{Lehre}
 \item [07.2006-02.2012] Betreuung von DESY-Sommerstudenten und
 Masterstudenten
+\item [02.2015] Hospitation im Gymnasium Grootmoor
 \end{cvlist}
 
 \begin{cvlist}{Berufliche Auslandsaufenthalte}
