--- a/AnschreibenLeher.tex
+++ b/AnschreibenLeher.tex
@@ -15,46 +15,51 @@
 \begin{document}
 \pagestyle{empty}
 
-\begin{letter}{Daniela Freyer\\
-Stellv. Schulleitung\\
-Stadtteilschule Barmbek\\ 
-Krausestra{\ss}e 53, 22049 Hamburg}
+\begin{letter}{ Beh{\"o}rde f{\"u}r Schule und Berufsbildung\\
+Hamburger Stra{\ss}e 31\\ 
+22083 Hamburg}
 
 \setkomavar{date}{\today}
-\setkomavar{subject}{Bewerbung als Lehrer} 
+\setkomavar{subject}{Bewerbung f{\"u}r den Vorbereitungsdienst} 
 
-\opening{Sehr geehrte Frau Freyer,} 
+\opening{Sehr geehrte Damen und Herren,} 
 
-mein Name ist Michele Viti. {\"U}ber die Webseite der Stadt Hamburg habe
-ich das Stellenangebot mit gro{\ss}em Interesse gelesen und m{\"o}chte mich darauf bewerben.
+ich m{\"o}chte mich f{\"u}r den Vorbereitungsdienst zum Quereinstieg in den Lehrerberuf bewerben.
+%{\"U}ber die Webseite der Stadt Hamburg habe
+%ch das Stellenangebot mit gro{\ss}em Interesse gelesen und m{\"o}chte mich darauf bewerben.
 
-Meine Leidenschaft ist schon immer die Physik,  Mathematik und  Informatik.
+Meine Leidenschaft ist schon immer die Physik,  Mathematik und  Informatik gewesen.
 Seit meiner Kindheit war mir klar, dass ich Physik studieren wollte. Mit acht Jahren habe ich mein erstes Computerprogramm
 geschrieben, nachdem mein Vater mich in die Programmierung eingef{\"u}hrt hat.
 Mit Freunden und Kommilitonen habe ich w{\"a}hrend der Schul- und Studienzeit viel {\"u}ber die Physik geredet, um ihnen ebenfalls Freude und Leidenschaft f{\"u}r dieses Thema zu vermitteln.
 
-In diesem Anschreiben werde ich kurz die wichtigsten Punkte meines Studiums und die
-meiner bisherigen Berufserfahrung zusammenfassen, welche auf der Grundlagenforschung und der Entwicklung hochkomplizierter Software basieren.
+%In diesem Anschreiben werde ich kurz die wichtigsten Punkte meines Studiums und die
+%meiner bisherigen Berufserfahrung zusammenfassen, welche auf der Grundlagenforschung und der Entwicklung hochkomplizierter Software basieren.
 
 An der Perugia Universit{\"a}t in Italien habe ich Physik studiert. Im Anschluss daran habe ich in Deutschland an der Humboldt Universit{\"a}t zu Berlin im Fachbereich
-Teilchen-/Beschleunigerphysik promoviert. In meinen Studien handelte es sich um
-Simulation und Test wichtiger Komponenten von Teilchenbeschleunigern und Detektoren.
+Teilchen-/Beschleunigerphysik promoviert. Inhalt meiner Studien waren die Durchf{\"u}hrung von Simulationen und Tests wichtiger Komponenten von Teilchenbeschleunigern und Detektoren.
 
-Nach dem erfolgreichen Abschluss meiner Promotion habe ich eine Stelle als Post-Doktorand am Forschungsinstitut DESY in Hamburg angenommen. Hier arbeitete
-ich f{\"u}r das ALFA-Projekt des ATLAS Experiments am CERN in Genf. Innerhalb des
-Projekts habe ich mich mit Detektorstrahltestmessung besch{\"a}ftigt. In diesem Projekt
-war ich der Koordinator der  "`Data Preparation"' Gruppe, die f{\"u}r die Aufbereitung
-von gro{\ss}en Mengen von Daten zust{\"a}ndig und an der physikalischen Datenanalyse
-beteiligt war. Au{\ss}erdem geh{\"o}rte ich zu dem Softwareentwicklungsteam des ATLAS
-Experiments.
+Seit dem erfolgreichen Abschluss meiner Promotion arbeite ich am Forschungsinstitut DESY in Hamburg. 
 
-Im Juni 2012 wechselte ich zu der Strahlendetektor-Gruppe in DESY. In der Gruppe
-bin ich zust{\"a}ndig f{\"u}r die Entwicklung des Softwareframeworks f{\"u}r Datenaufbereitung,
-Daten- und Bildverarbeitung und der Software f{\"u}r das Data Acquisition System.
-Au{\ss}erdem beteilige ich mich an der Auswertung der Testdaten.
+
+Die Betreuung von Studierenden dort bereitete mir viel Freude. Im Februar 2015 absolvierte ich eine 3-w{\"o}chige Hospitation im Schuldienst.
+
+
+% Hier arbeitete
+%ich f{\"u}r das ALFA-Projekt des ATLAS Experiments am CERN in Genf. Innerhalb des
+%Projekts habe ich mich mit Detektorstrahltestmessung besch{\"a}ftigt. In diesem Projekt
+%war ich der Koordinator der  "`Data Preparation"' Gruppe, die f{\"u}r die Aufbereitung
+%von gro{\ss}en Mengen von Daten zust{\"a}ndig und an der physikalischen Datenanalyse
+%beteiligt war. Au{\ss}erdem geh{\"o}rte ich zu dem Softwareentwicklungsteam des ATLAS
+%Experiments.
+%
+%Im Juni 2012 wechselte ich zu der Strahlendetektor-Gruppe in DESY. In der Gruppe
+%bin ich zust{\"a}ndig f{\"u}r die Entwicklung des Softwareframeworks f{\"u}r Datenaufbereitung,
+%Daten- und Bildverarbeitung und der Software f{\"u}r das Data Acquisition System.
+%Au{\ss}erdem beteilige ich mich an der Auswertung der Testdaten.
 
 Aufgrund meiner oben genannten T{\"a}tigkeiten entsprechen meine Qualit{\"a}ten und
-Kompetenzen sehr gut den Anforderungen dieser Stelle als Lehrer. {\"U}ber eine Einladung zu einem pers{\"o}nlichen Vorstellungsgespr{\"a}ch w{\"u}rde ich mich sehr freuen.
+Kompetenzen sehr gut den Anforderungen einer T{\"a}tigkeit als Lehrer. {\"U}ber eine Einladung zu einem pers{\"o}nlichen Vorstellungsgespr{\"a}ch freue ich mich sehr.
 
 
 \closing{Mit freundlichem Gru\ss}
