--- a/AnschreibenLeher.tex
+++ b/AnschreibenLeher.tex
@@ -39,7 +39,8 @@ Mit Freunden und Kommilitonen habe ich w{\"a}hrend der Schul- und Studienzeit vi
 An der Perugia Universit{\"a}t in Italien habe ich Physik studiert. Im Anschluss daran habe ich in Deutschland an der Humboldt Universit{\"a}t zu Berlin im Fachbereich
 Teilchen-/Beschleunigerphysik promoviert. Inhalt meiner Studien waren die Durchf{\"u}hrung von Simulationen und Tests wichtiger Komponenten von Teilchenbeschleunigern und Detektoren.
 
-Seit dem erfolgreichen Abschluss meiner Promotion arbeite ich am Forschungsinstitut DESY in Hamburg. 
+Seit dem erfolgreichen Abschluss meiner Promotion arbeite ich am Forschungsinstitut DESY in Hamburg. W{\"a}hrend meiner Besch{\"a}ftigung habe ich mich mit komplexen Problemen in der modernen Grundlagenforschung engagiert und  
+ dar{\"u}ber hinaus habe ich meine Fachkenntnisse im Bereich Informatik erweitert mit 
 
 
 Die Betreuung von Studierenden dort bereitete mir viel Freude. Im Februar 2015 absolvierte ich eine 3-w{\"o}chige Hospitation im Schuldienst.
@@ -59,7 +60,8 @@ Die Betreuung von Studierenden dort bereitete mir viel Freude. Im Februar 2015 a
 %Au{\ss}erdem beteilige ich mich an der Auswertung der Testdaten.
 
 Aufgrund meiner oben genannten T{\"a}tigkeiten entsprechen meine Qualit{\"a}ten und
-Kompetenzen sehr gut den Anforderungen einer T{\"a}tigkeit als Lehrer. {\"U}ber eine Einladung zu einem pers{\"o}nlichen Vorstellungsgespr{\"a}ch freue ich mich sehr.
+Kompetenzen sehr gut den Anforderungen einer T{\"a}tigkeit als Lehrer. 
+%{\"U}ber eine Einladung zu einem pers{\"o}nlichen Vorstellungsgespr{\"a}ch freue ich mich sehr.
 
 
 \closing{Mit freundlichem Gru\ss}
