presentation letter for teaching

--- a/AnschreibenLeher.tex
+++ b/AnschreibenLeher.tex
@@ -24,26 +24,42 @@ Hamburger Stra{\ss}e 31\\
 
 \opening{Sehr geehrte Damen und Herren,} 
 
-ich m{\"o}chte mich f{\"u}r den Vorbereitungsdienst zum Quereinstieg in den Lehrerberuf bewerben.
+ich m{\"o}chte mich f{\"u}r den Vorbereitungsdienst zum Quereinstieg in den
+Lehrerberuf bewerben.
 %{\"U}ber die Webseite der Stadt Hamburg habe
 %ch das Stellenangebot mit gro{\ss}em Interesse gelesen und m{\"o}chte mich darauf bewerben.
 
-Meine Leidenschaft ist schon immer die Physik,  Mathematik und  Informatik gewesen.
-Seit meiner Kindheit war mir klar, dass ich Physik studieren wollte. Mit acht Jahren habe ich mein erstes Computerprogramm
-geschrieben, nachdem mein Vater mich in die Programmierung eingef{\"u}hrt hat.
-Mit Freunden und Kommilitonen habe ich w{\"a}hrend der Schul- und Studienzeit viel {\"u}ber die Physik geredet, um ihnen ebenfalls Freude und Leidenschaft f{\"u}r dieses Thema zu vermitteln.
+Meine Leidenschaft ist schon immer die Physik,  Mathematik und  Informatik
+gewesen. Seit meiner Kindheit war mir klar, dass ich Physik studieren wollte.
+Mit acht Jahren habe ich mein erstes Computerprogramm geschrieben, nachdem mein
+Vater mich in die Programmierung eingef{\"u}hrt hat. Mit Freunden und
+Kommilitonen habe ich w{\"a}hrend der Schul- und Studienzeit viel {\"u}ber die
+Physik geredet, um ihnen ebenfalls Freude und Leidenschaft f{\"u}r dieses Thema
+zu vermitteln.
 
 %In diesem Anschreiben werde ich kurz die wichtigsten Punkte meines Studiums und die
 %meiner bisherigen Berufserfahrung zusammenfassen, welche auf der Grundlagenforschung und der Entwicklung hochkomplizierter Software basieren.
 
-An der Perugia Universit{\"a}t in Italien habe ich Physik studiert. Im Anschluss daran habe ich in Deutschland an der Humboldt Universit{\"a}t zu Berlin im Fachbereich
-Teilchen-/Beschleunigerphysik promoviert. Inhalt meiner Studien waren die Durchf{\"u}hrung von Simulationen und Tests wichtiger Komponenten von Teilchenbeschleunigern und Detektoren.
+An der Perugia Universit{\"a}t in Italien habe ich Physik studiert. Im
+Anschluss daran habe ich in Deutschland an der Humboldt Universit{\"a}t zu
+Berlin im Fachbereich Teilchen-/Beschleunigerphysik promoviert. Inhalt meiner
+Studien waren die Durchf{\"u}hrung von Simulationen und Tests wichtiger
+Komponenten von Teilchenbeschleunigern und Detektoren.
 
-Seit dem erfolgreichen Abschluss meiner Promotion arbeite ich am Forschungsinstitut DESY in Hamburg. W{\"a}hrend meiner Besch{\"a}ftigung habe ich mich mit komplexen Problemen in der modernen Grundlagenforschung engagiert und  
- dar{\"u}ber hinaus habe ich meine Fachkenntnisse im Bereich Informatik erweitert mit 
+Seit dem erfolgreichen Abschluss meiner Promotion arbeite ich am
+Forschungsinstitut DESY in Hamburg. In DESY engagiere ich mich mit komplexen
+Problemen in der modernen Grundlagenforschung, wo eine l{\"o}sungsorietnierte
+Denkweise erfordert ist. Dar{\"u}ber hinaus habe ich meine Fachkenntnisse im
+Bereich Informatik erweitert, und besch{\"a}ftige mich mit professionellen
+Methode in der Softwareentwiklung. Neben Forschung und Entwicklung geh{\"o}rt
+die Betreuung von Studierenden zu meinen Aufgaben, was mir viel Freude bereitet.
 
 
-Die Betreuung von Studierenden dort bereitete mir viel Freude. Im Februar 2015 absolvierte ich eine 3-w{\"o}chige Hospitation im Schuldienst.
+%Die Betreuung von Studierenden dort bereitete mir viel Freude. 
+
+Mein Interesse an der Lehre ist mit den Jahren gewachsen, so habe ich mich
+entschlossen im Februar 2015 eine 3-w{\"o}chige Hospitation im Schuldienst beim
+Gymnasium Grootmoor zu absolvieren.
 
 
 % Hier arbeitete
