--- a/Vorbereitungsdienst/Anschreiben.tex
+++ b/Vorbereitungsdienst/Anschreiben.tex
@@ -34,8 +34,8 @@ gewesen. Seit meiner Kindheit war mir klar, dass ich Physik studieren wollte.
 Mit acht Jahren habe ich mein erstes Computerprogramm geschrieben, nachdem mein
 Vater mich in die Programmierung eingef{\"u}hrt hat. Mit Freunden und
 Kommilitonen habe ich w{\"a}hrend der Schul- und Studienzeit viel {\"u}ber die
-Physik geredet, um ihnen ebenfalls Freude und Leidenschaft f{\"u}r dieses Thema
-zu vermitteln.
+Physik gesprochen, um ihnen ebenfalls Freude und Leidenschaft f{\"u}r dieses
+Thema zu vermitteln.
 
 %In diesem Anschreiben werde ich kurz die wichtigsten Punkte meines Studiums und die
 %meiner bisherigen Berufserfahrung zusammenfassen, welche auf der Grundlagenforschung und der Entwicklung hochkomplizierter Software basieren.
@@ -47,18 +47,18 @@ Studien waren die Durchf{\"u}hrung von Simulationen und Tests wichtiger
 Komponenten von Teilchenbeschleunigern und Detektoren.
 
 Seit dem erfolgreichen Abschluss meiner Promotion arbeite ich am
-Forschungsinstitut DESY in Hamburg. In DESY engagiere ich mich mit komplexen
-Problemen in der modernen Grundlagenforschung, wo eine l{\"o}sungsorietnierte
+Forschungsinstitut DESY in Hamburg. Bei DESY engagiere ich mich mit komplexen
+Problemen in der modernen Grundlagenforschung, wo eine l{\"o}sungsorientierte
 Denkweise erfordert ist. Dar{\"u}ber hinaus habe ich meine Fachkenntnisse im
-Bereich Informatik erweitert, und besch{\"a}ftige mich mit professionellen
-Methode in der Softwareentwiklung. Neben Forschung und Entwicklung geh{\"o}rt
+Bereich Programmierung erweitert, und besch{\"a}ftige mich mit professionellen
+Methoden in der Softwareentwicklung. Neben Forschung und Entwicklung geh{\"o}rt
 die Betreuung von Studierenden zu meinen Aufgaben, was mir viel Freude bereitet.
 
 
 %Die Betreuung von Studierenden dort bereitete mir viel Freude. 
 
-Mein Interesse an der Lehre ist mit den Jahren gewachsen, so habe ich mich
-entschlossen im Februar 2015 eine 3-w{\"o}chige Hospitation im Schuldienst beim
+Mein Interesse an der Lehre ist mit den Jahren gewachsen. Deshalb absolvierte
+ich im Februar 2015 eine 3-w{\"o}chige Hospitation im Schuldienst beim
 Gymnasium Grootmoor zu absolvieren.
 
 
