--- a/LebenslaufKurz/Lebenslauf.tex
+++ b/LebenslaufKurz/Lebenslauf.tex
@@ -40,7 +40,7 @@ Kirchenstra{\ss}e 9\\
 22869 Schenefeld
 \item Telefon: 040 53273453\\
 Mobil: 0163 1903077\\
-E"~Mail:~micheleviti78@hotmail.com
+E"~Mail:~micheleviti78@gmail.com
 \item Geburtsdatum: 17.\,April\,1978\\
 Geburtsort: Arezzo, Italien\\
 Staatsangeh\"origkeit: italienisch,deutsch
@@ -53,13 +53,13 @@ Wissenschaftlicher Mitarbeiter
 
 {\scshape {\bfseries Projekte:}}
 \begin{description}
-\item[04.2012-heute]  Entwiklung von Messger{\"a}ten und
+\item[04.2012-heute]  Entwicklung von Messger{\"a}ten und
 deren Komponenten f{\"u}r die Messung der Eigenschaften des Elektronenstrahls
 der Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
 \item[06.2012-03.2015]Projekt PERCIVAL, Entwicklung eines neuen
 bildgebenden CMOS-Detektors
-\item[01.2010-05.2012]ALFA Projekt des ATLAS Esperiments an CERN (Genf,
-Schweiz) Entwicklung und installation von Spurdetektoren aus szintillierenden
+\item[01.2010-05.2012]ALFA Projekt des ATLAS Experiments an CERN (Genf,
+Schweiz) Entwicklung und Installation von Spurdetektoren aus szintillierenden
 Fasern in beweglichen Vakuumtanks entlang der Strahlr{\"o}hre des LHC
 Beschleunigers.
 \end{description}
@@ -317,7 +317,7 @@ Masterstudenten
 \begin{cvlist}{Berufliche Auslandsaufenthalte}
 \item [02.2006-12.2014] Leben und arbeiten in Deutschland (seit 12.2014
 deutscher B{\"u}rger)
-\item [2006-2007] 5 Aufenthaltsperioden in Stanford Universit\"at, USA.
+\item [2006-2007] 5 Aufenthaltsperioden an der Stanford Universit\"at, USA.
 \item [02.2008] Nowosibirsk, Russische F\"oderation
 \item [01.2010-06.2012] Regelm\"a{\ss}ige Aufenthalte in Genf, Schweiz
 \end{cvlist}
@@ -371,7 +371,7 @@ Jugendsegeln e.V."', Kiel
 %\end{cvlist}
 
 \cvplace{Hamburg}
-\date{26.~Juli~2014}
+\date{\today}
 
 \end{cv}
 
