changes in the standard english cv

--- a/DESY/AnschreibenEN.tex
+++ b/DESY/AnschreibenEN.tex
@@ -15,86 +15,51 @@
 \begin{document}
 \pagestyle{empty}
 
-\begin{letter}{DESY\\
-Notkestra{\ss}e 85\\ 
-22607 Hamburg}
+\begin{letter}{European XFEL GmbH \\
+Holzkoppel 4 \\
+22869 Schenefeld \\
+Germany}
 
 \setkomavar{date}{\today}
-\setkomavar{subject}{Bewerbung als Wissenschaftlicher Mitarbeiter} 
+\setkomavar{subject}{Application as Software Engineer} 
 
-\opening{Sehr geehrte Damen und Herren,} 
+\setlength{\parindent}{15pt}
 
-mein Name ist Michele Viti. Neulich habe
-ich das Stellenangebot f{\"u}r Beschleuniger Forschung mit gro{\ss}em Interesse
-gelesen und m{\"o}chte mich darauf bewerben.  W\"ahrend meiner
-Berufserfahrung habe ich mich mit Datenprozessierung, Datenauswertung
-und der entsprechenden Softwareentwicklung besch{\"a}ftigt.
-Au{\ss}erdem habe ich an zahlreichen Meetings, Workshops und
-internationalen Konferenzen teilgenommen bei denen ich Daten und
-Resultate pr\"asentiert habe. In diesem Anschreiben werde ich kurz die
-wichtigen Punkte meines Studiums und meiner Berufserfahrung
-zusammenfassen.
+\opening{Dear Dr. Brockhauser,}
 
-%Software entwicklung real time system expertiment
+My name is Michele Viti and I would like to apply for the position as Programmer
+- Scientific Instrument Support Engineer.\\
+\indent I studied elementary particle physics at the Perugia university, with a
+thesis on the simulation of the trigger for the experiment KOPIO on a rare decay of
+the K-meson. I started my PhD in 2006 in DESY Zeuthen, working in the linear
+collider group. My work concentrated on both simulations and beam test data
+analysis for the development of systems for a precise beam energy measurement
+at the International Linear Collider.\\
+\indent After successfully defending my PhD thesis, I started my postdoctoral
+research in DESY Hamburg. In DESY Hamburg I have been working for three groups, namely
+the ATLAS group, the HASYLAB detector group and my current group, the machine
+beam control (Maschine Strahlkontrollen, MSK) group.\\
+In the ATLAS experiment I was part of the ALFA project leading the data
+preparation group which was responsible for the preprocessing and preparation of
+the beam test and tunnel data.  \\
+In the HASYLAB detector group I worked for the PERCIVAL project,
+developing the data acquisition system for the test setup, and a framework for the processing
+and the analysis of the data. As well as software tasks, I contributed to
+physical studies like the determination of the linearity of the ADCs and
+measuring the resolution of the detector.\\ 
+In the MSK group I'm currently developing the software for the slow
+control and data acquisition for the beam arrival time monitors and the library for the
+stepper motor control.\\
+\indent Starting as a pure physicist, I moved through these years to more
+engineering tasks. This was driven by both personal interest and work necessity. This
+evolution matured in the current group where I have the chance to work
+together with pure programmers and software engineers.\\
+\indent What I can offer for this position is an excellent combination of very
+good physics knowledge and professional experience in the software development,
+especially for slow control, data acquisition and analysis for measuring
+instruments and photon detectors.
 
-%\"Uber die StepStone Webseite habe ich von Ihrem Stellenangebot
-%erfahren und m\"ochte mich darauf bewerben.
-
-An der Perugia Universit\"at in Italien habe ich Physik studiert. Im
-Anschluss daran habe ich in Deutschland an der Humboldt Universit\"at
-zu Berlin im Fachbereich Teilchen-/Beschleunigerphysik promoviert. In
-meinen Studien handelte es sich um Simulation und Test wichtiger
-Komponenten von Teilchenbeschleunigern und Detektoren.
-
-Nach dem erfolgreichen Abschluss meiner Promotion habe ich eine Stelle
-als Post-Doktorand am Forschungsinstitut DESY in Hamburg
-angenommen. Hier arbeitete ich f\"ur das ALFA-Projekt des ATLAS
-Experiments am CERN in Genf. Innerhalb des Projekts habe ich mich mit
-Detektorstrahltestmessung besch\"aftigt. In dem Projekt war ich der
-Koordinator der "`Data Preparation"' Gruppe, die f\"ur die Aufbereitung
-von gro{\ss}en Mengen von Daten zust\"andig und an der physikalischen
-Datenanalyse beteiligt war. Au{\ss}erdem geh{\"o}rte ich zu dem
-Softwareentwicklungsteam des ATLAS Experiments.
-
-Im Juni 2012 wechselte ich zu der Strahlendetektor-Gruppe in DESY. In
-der Gruppe bin ich zust\"andig f\"ur die Entwicklung des
-Softwareframeworks f\"ur Datenaufbereitung, Daten- und
-Bildverarbeitung und der Software f\"ur das Data Acquisition
-System. Au{\ss}erdem beteilige ich mich an der Auswertung der
-Testdaten.
-
-Meine Beitr\"age zu diesen Studien umfassen einen breiten Bereich,
-insbesondere Computersimulation, Datenaufnahme, Datenaufbereitung und
-Datenauswertung. Um diese Aufgaben zu erf{\"u}llen, habe ich
-erweiterte statistische Analyseverfahren verwendet, fundierte
-Programmierkenntnisse, insbesondere objektorientierte Programmierung,
-erworben, komplexe Software Frameworks benutzt und Algorithmen
-erzeugt.
-
-%%f\"ur die Entwicklung neuer
-%%Komponenten und Detektoren, Planung und Teilnahme an Tests f\"ur
-%%Protoypen und Datenanalysen. Details \"uber diese Aufgaben k\"onnen
-%%meinem Lebenslauf entnommen werden.
-
-Ich habe eine hohe Flexibilit\"at, Selbstst\"andigkeit und
-Belastbarkeit entwickelt, um mich erfolgreich verschiedenen Themen und
-neuen Herausforderungen zu stellen.Seit mehr als 8 Jahren arbeite ich
-innerhalb internationaler Kollaborationen mit verschiedenen
-weltber\"uhmten Instituten und Universit{\"a}ten, wie z.B. der
-Stanford Universit{\"a}t in der USA, dem Forschungszentrum CERN in Genf
-und dem Budka Institut in Novosibirsk, in denen sehr gute
-Kommunikationsf\"ahigkeiten in einer multikulturellen Umgebung und
-teamorientierte Arbeit erfordert sind.
-
-%Seit ca. 8 Jahren arbeite ich in
-%gro{\ss}en internationalen Kollaborationen, .
-
-Aufgrund meiner oben genannten T\"atigkeiten entsprechen meine
-Qualit\"aten und Kompetenzen sehr gut den Anforderungen dieser Stelle
-als Wissenschaftlicher Mitarbeiter. \"Uber eine Einladung zu einem pers\"onlichen
-Vorstellungsgespr\"ach w\"urde ich mich sehr freuen.
-
-\closing{Mit freundlichem Gru\ss}
+\closing{with best regards}
 \enlargethispage{6\baselineskip}
 
 \end{letter}
