small changes in english letter of presentation#

--- a/DESY/AnschreibenEN.tex
+++ b/DESY/AnschreibenEN.tex
@@ -42,14 +42,14 @@ beam control (Maschine Strahlkontrollen, MSK) group.\\
 In the ATLAS experiment I was part of the ALFA project leading the data
 preparation group which was responsible for the preprocessing and preparation of
 the beam test and tunnel data.  \\
-In the HASYLAB detector group I worked for the PERCIVAL project,
-developing the data acquisition system for the test setup, and a framework for the processing
-and the analysis of the data. As well as software tasks, I contributed to
-physical studies like the determination of the linearity of the ADCs and
-measuring the resolution of the detector.\\ 
+In the HASYLAB detector group I worked for the PERCIVAL project, a novel CMOS
+imaging detector, developing the data acquisition system for the test setup, and
+a framework for the processing and the analysis of the data. As well as software
+tasks, I contributed to physical studies like the determination of the linearity
+of the ADCs and measuring the resolution of the detector.\\
 In the MSK group I'm currently developing the software for the slow
-control and data acquisition for the beam arrival time monitors and the library for the
-stepper motor control.\\
+control and data acquisition for the beam arrival time monitors at FLASH I/II
+and XFEL and the library for the stepper motor control.\\
 \indent Starting as a pure physicist, I moved through these years to more
 engineering tasks. This was driven by both personal interest and work necessity. This
 evolution matured in the current group where I have the chance to work
