added item SCADA

--- a/LebenslaufKomplet/Lebenslauf.tex
+++ b/LebenslaufKomplet/Lebenslauf.tex
@@ -70,7 +70,8 @@ der Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
 \begin{description}
 \item[Betriebssysteme] : Ubuntu Linux (12.04 und 16.04)
 \item[Programmiersprachen] : C++11, Python
-\item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT
+\item[Software framework] : Qt (4.8.6), ChimeraTK, ROOT
+\item[SCADA] : DOOCS
 \item[Kommunikationsprotokoll] : TCP/IP, UDP
 \item[Bibliotek] : GSL, ZMQ, boost, HDF5
 \item[Hardware] : MTCA Standard
