--- a/LebenslaufStandard/LebenslaufEN.tex
+++ b/LebenslaufStandard/LebenslaufEN.tex
@@ -63,7 +63,8 @@ accelerator
 \item[Operating System] : Ubuntu Linux (12.04 und 16.04), Scientific Linux,
 Windows XP/7
 \item[Program Languages] : C++11, Python
-\item[Software frameworks] : Qt, ChimeraTK, DOOCS, ROOT, Marlin
+\item[Software frameworks] : Qt, ChimeraTK, ROOT, Marlin
+\item[SCADA] : DOOCS
 \item[Communications Protocols] : TCP/IP, UDP
 \item[Libraries] : GSL, ZMQ, boost, Minuit, HDF5
 \item[Hardware] : MTCA Standard
