--- a/LebenslaufStandard/Lebenslauf.tex
+++ b/LebenslaufStandard/Lebenslauf.tex
@@ -83,7 +83,8 @@ Beschleunigers.
 \item[Betriebssysteme] : Ubuntu Linux (12.04 und 16.04), Scientific Linux,
 Windows XP/7
 \item[Programmiersprachen] : C++11, Python
-\item[Software framework] : Qt (4.8.6), ChimeraTK, DOOCS, ROOT, Marlin
+\item[Software framework] : Qt (4.8.6), ChimeraTK, ROOT, Marlin
+\item[SCADA] : DOOCS
 \item[Kommunikationsprotokoll] : TCP/IP, UDP
 \item[Bibliotek] : GSL, ZMQ, boost, Minuit, HDF5
 \item[Hardware] : MTCA Standard
