changed description of the tasks for the MSK group in the cv

--- a/LebenslaufKomplet/Lebenslauf.tex
+++ b/LebenslaufKomplet/Lebenslauf.tex
@@ -54,8 +54,8 @@ Maschine Strahl Kontrolle (MSK) Gruppe, Wissenschaftlicher Mitarbeiter\\
 Aufgaben:\\
 
 Die MSK Gruppe ist zust{\"a}ndig f{\"u}r die Entwicklung von Messger{\"a}ten und
-deren Komponenten f{\"u}r die Messung der Eigenschaften des Elektronenstrahls
-der Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
+deren Komponenten die Regel-, Synchronisations- und Feedbacksysteme der Beschleuniger XFEL
+und FLASH I/II bei DESY.
 \begin{itemize}
   \item Design und Implementation der Software f{\"u}r die Datenerfassung und
   Steurung der Messger{\"a}te
