--- a/LebenslaufStandard/LebenslaufEN.tex
+++ b/LebenslaufStandard/LebenslaufEN.tex
@@ -49,8 +49,9 @@ Nationality: italian, german
 
 {\scshape {\bfseries Projects:}}
 \begin{description}
-\item[04.2012-today] Development of the instrumentations for the electron bunch
-control for the accellerator machines XFEL and FLASH I/II in DESY.
+\item[04.2012-today] Development of the instrumentations for beam control
+feedback and sychronisation systems for the accellerators XFEL and FLASH I/II in
+DESY.
 \item[06.2012-03.2015]Project PERCIVAL, Developement of a CMOS imaging
 detector
 \item[01.2010-05.2012]ALFA Project for ATLAS Experiment at CERN (Geneva,
