--- a/LebenslaufKurz/Lebenslauf.tex
+++ b/LebenslaufKurz/Lebenslauf.tex
@@ -53,9 +53,9 @@ Wissenschaftlicher Mitarbeiter
 
 {\scshape {\bfseries Projekte:}}
 \begin{description}
-\item[04.2012-heute]  Entwicklung von Messger{\"a}ten und
-deren Komponenten f{\"u}r die Messung der Eigenschaften des Elektronenstrahls
-der Beschleunigungmaschinen XFEL und FLASH I/II in DESY.
+\item[04.2012-heute]  Entwicklung von Messger{\"a}ten und deren Komponenten die
+Regel-, Synchronisations- und Feedbacksysteme der Beschleuniger XFEL und FLASH
+I/II bei DESY.
 \item[06.2012-03.2015]Projekt PERCIVAL, Entwicklung eines neuen
 bildgebenden CMOS-Detektors
 \item[01.2010-05.2012]ALFA Projekt des ATLAS Experiments an CERN (Genf,
