changed one english word with its (almost) translation in german

--- a/WissenschaftlicherMitarbeiterBAW/Anschreiben.tex
+++ b/WissenschaftlicherMitarbeiterBAW/Anschreiben.tex
@@ -62,7 +62,7 @@ Softwareframeworks f\"ur die Datenverarbeitung und Datenauswertung und der
 Software f{\"u}r das Data Acquisition System f\"ur ein neuen bildgebenden CMOS
 Detektor gearbeitet.\\
 In der aktuellen Gruppe, die MSK Gruppe, bin ich zust{\"a}ndig f{\"u}r die
-Software f{\"u}r ``'Slow-Control''' und Datenerfassung von Messger{\"a}ten an
+Software f{\"u}r Regelsysteme und Datenerfassung von Messger{\"a}ten an
 Teilchenbeschleunigern und f{\"u}r die Kontrolle von Schrittmotoren.\\
 \indent Bei DESY engagiere ich mich mit komplexen Problemen in der modernen
 Grundlagenforschung und Entwicklung, wo eine l{\"o}sungsorientierte Denkweise
